Fix layout issue with search and fb button on iPad portrait
close #57

--- a/sites/all/themes/rlrealty/sass/_responsive.scss
+++ b/sites/all/themes/rlrealty/sass/_responsive.scss
@@ -101,8 +101,12 @@
         
         .region-navigation
         {
-            width: 575px;
-            margin: 0 auto;
+            text-align: center;
+            
+            & > div
+            {
+                display: inline-block !important;
+            }
         }
     }
     
@@ -375,6 +379,7 @@
             border-right: 0;
             background:$navy;
             z-index: 1000;
+            text-align: left;
         }
         
         #block-system-main-menu
